
classDiagram
    class App {
        +run()
    }
    class TicketModel {
        -id: int
        -title: str
        -description: str
        -status: str
        -created_at: datetime
        -updated_at: datetime
        -comments: list[Comment]
        +__init__(self, title: str, description: str)
    }
    class Comment {
        -id: int
        -ticket_id: int
        -content: str
        -created_at: datetime
        +__init__(self, content: str)
    }
    class AnalyticsService {
        +get_resolution_times() list[dict]
        +get_active_tickets_by_category() list[dict]
    }
    App --> TicketModel
    TicketModel --> Comment
    App --> AnalyticsService
